--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -1,92 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TikTok Feed - Full Transparency</title>
-  <link rel="stylesheet" href="../css/tiktok.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Feed - Full Transparency</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>TikTok Feed - Full Transparency</h1>
-  <div id="feed"></div>
-  <button id="exportData">Export Engagement Data</button>
+    <header>
+        <h1>Video Feed</h1>
+        <button>Log In</button>
+    </header>
 
-  <script>
-    // 12 school-appropriate TikTok-style videos
-    const videos = [
-      {id: "VbfpW0pbvaU", title: "Top TikTok Dance Clips"},
-      {id: "fLexgOxsZu0", title: "Funny Animal Short"},
-      {id: "60ItHLz5WEA", title: "Motivational Speech"},
-      {id: "3JZ_D3ELwOQ", title: "Cool Science Experiment"},
-      {id: "kJQP7kiw5Fk", title: "DIY Life Hacks"},
-      {id: "RgKAFK5djSk", title: "Positive Study Tips"},
-      {id: "Ukg_U3CnJWI", title: "Music Cover Short"},
-      {id: "hTWKbfoikeg", title: "Amazing Trick Shots"},
-      {id: "2Vv-BfVoq4g", title: "Popular Dance Clip"},
-      {id: "OPf0YbXqDm0", title: "Fun Compilation"},
-      {id: "M7lc1UVf-VE", title: "Educational Demo Video"},
-      {id: "E07s5ZYygMg", title: "Science Explainer Short"}
-    ];
+    <main class="content-feed full-transparency">
+        <div class="video-grid">
+            <!-- 12 Video Cards -->
+            <!-- Video 1 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+1" class="thumbnail-img" alt="Video 1">
+                    <div class="video-duration">0:30</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_1</div>
+                    <div class="video-title">Video 1 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.2K</div>
+                        <div class="stat-item">💬 120</div>
+                        <div class="stat-item">↗ 45</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because you liked "Video X" and watched "Video Y".
+                    </div>
+                </div>
+            </div>
 
-    // Load previous engagement data or create a new object
-    let engagementData = JSON.parse(localStorage.getItem('tiktok_full_engagement')) || {};
+            <!-- Video 2 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+2" class="thumbnail-img" alt="Video 2">
+                    <div class="video-duration">0:45</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_2</div>
+                    <div class="video-title">Video 2 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 950</div>
+                        <div class="stat-item">💬 80</div>
+                        <div class="stat-item">↗ 30</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because similar users watched this and you interacted with "Video Z".
+                    </div>
+                </div>
+            </div>
 
-    const feed = document.getElementById('feed');
+            <!-- Video 3 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+3" class="thumbnail-img" alt="Video 3">
+                    <div class="video-duration">1:00</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_3</div>
+                    <div class="video-title">Video 3 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.5K</div>
+                        <div class="stat-item">💬 200</div>
+                        <div class="stat-item">↗ 60</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because you recently watched "Video A" and engaged with similar topics.
+                    </div>
+                </div>
+            </div>
 
-    videos.forEach(video => {
-      const container = document.createElement('div');
-      container.className = 'video-container';
+            <!-- Video 4 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+4" class="thumbnail-img" alt="Video 4">
+                    <div class="video-duration">0:50</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_4</div>
+                    <div class="video-title">Video 4 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 700</div>
+                        <div class="stat-item">💬 60</div>
+                        <div class="stat-item">↗ 25</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because this is trending in your region and matches your watch history.
+                    </div>
+                </div>
+            </div>
 
-      // Video embed
-      const iframe = document.createElement('iframe');
-      iframe.src = `https://www.youtube.com/embed/${video.id}?enablejsapi=1`;
-      iframe.allow = "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture";
-      container.appendChild(iframe);
+            <!-- Video 5 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+5" class="thumbnail-img" alt="Video 5">
+                    <div class="video-duration">0:40</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_5</div>
+                    <div class="video-title">Video 5 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1K</div>
+                        <div class="stat-item">💬 90</div>
+                        <div class="stat-item">↗ 40</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because similar creators posted related content you engaged with.
+                    </div>
+                </div>
+            </div>
 
-      // Title
-      const title = document.createElement('p');
-      title.textContent = video.title;
-      container.appendChild(title);
+            <!-- Video 6 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+6" class="thumbnail-img" alt="Video 6">
+                    <div class="video-duration">1:10</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_6</div>
+                    <div class="video-title">Video 6 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.3K</div>
+                        <div class="stat-item">💬 150</div>
+                        <div class="stat-item">↗ 50</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended based on your past searches and interactions with similar videos.
+                    </div>
+                </div>
+            </div>
 
-      // Engagement buttons
-      const buttons = document.createElement('div');
-      buttons.className = 'engagement-buttons';
+            <!-- Video 7 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+7" class="thumbnail-img" alt="Video 7">
+                    <div class="video-duration">0:35</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_7</div>
+                    <div class="video-title">Video 7 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 800</div>
+                        <div class="stat-item">💬 70</div>
+                        <div class="stat-item">↗ 20</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because similar users in your network liked this video.
+                    </div>
+                </div>
+            </div>
 
-      const likeBtn = document.createElement('button');
-      likeBtn.textContent = 'Like';
-      likeBtn.onclick = () => {
-        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
-        engagementData[video.id].likes++;
-        localStorage.setItem('tiktok_full_engagement', JSON.stringify(engagementData));
-        alert(`Liked! Total likes: ${engagementData[video.id].likes}`);
-      };
+            <!-- Video 8 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+8" class="thumbnail-img" alt="Video 8">
+                    <div class="video-duration">0:55</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_8</div>
+                    <div class="video-title">Video 8 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1.1K</div>
+                        <div class="stat-item">💬 100</div>
+                        <div class="stat-item">↗ 35</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because you previously liked videos with this theme or tag.
+                    </div>
+                </div>
+            </div>
 
-      const skipBtn = document.createElement('button');
-      skipBtn.textContent = 'Skip';
-      skipBtn.onclick = () => {
-        engagementData[video.id] = engagementData[video.id] || {likes:0, skips:0, retention:0};
-        engagementData[video.id].skips++;
-        localStorage.setItem('tiktok_full_engagement', JSON.stringify(engagementData));
-        alert(`Skipped! Total skips: ${engagementData[video.id].skips}`);
-      };
+            <!-- Video 9 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+9" class="thumbnail-img" alt="Video 9">
+                    <div class="video-duration">0:48</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_9</div>
+                    <div class="video-title">Video 9 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 900</div>
+                        <div class="stat-item">💬 85</div>
+                        <div class="stat-item">↗ 28</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended based on your interaction with similar content recently.
+                    </div>
+                </div>
+            </div>
 
-      buttons.appendChild(likeBtn);
-      buttons.appendChild(skipBtn);
-      container.appendChild(buttons);
+            <!-- Video 10 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+10" class="thumbnail-img" alt="Video 10">
+                    <div class="video-duration">0:42</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_10</div>
+                    <div class="video-title">Video 10 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 750</div>
+                        <div class="stat-item">💬 65</div>
+                        <div class="stat-item">↗ 22</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because you watched similar creators’ videos in the past.
+                    </div>
+                </div>
+            </div>
 
-      feed.appendChild(container);
-    });
+            <!-- Video 11 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+11" class="thumbnail-img" alt="Video 11">
+                    <div class="video-duration">1:05</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_11</div>
+                    <div class="video-title">Video 11 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 1K</div>
+                        <div class="stat-item">💬 95</div>
+                        <div class="stat-item">↗ 33</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended due to your previous engagement with this category.
+                    </div>
+                </div>
+            </div>
 
-    // Export data button
-    document.getElementById('exportData').onclick = () => {
-      const dataStr = JSON.stringify(engagementData, null, 2);
-      const blob = new Blob([dataStr], {type: "application/json"});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url;
-      a.download = "tiktok_full_engagement.json";
-      a.click();
-      URL.revokeObjectURL(url);
-    };
-  </script>
+            <!-- Video 12 -->
+            <div class="video-card">
+                <div class="video-thumbnail">
+                    <img src="https://via.placeholder.com/180x320?text=Video+12" class="thumbnail-img" alt="Video 12">
+                    <div class="video-duration">0:38</div>
+                </div>
+                <div class="video-info">
+                    <div class="video-creator">creator_12</div>
+                    <div class="video-title">Video 12 Title</div>
+                    <div class="video-stats">
+                        <div class="stat-item">❤ 880</div>
+                        <div class="stat-item">💬 78</div>
+                        <div class="stat-item">↗ 29</div>
+                    </div>
+                    <div class="algorithm-info">
+                        Recommended because you followed creators who post this type of content.
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
