--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -9,58 +9,9 @@
 <body>
   <div class="feed-container" id="feed"></div>
 
-  <script src="../js/tiktokPartial.js"></script>
+  <script src="../js/tiktokAlgorithm.js"></script>
   <script>
-    const recommendationMap = { /* same as opaque */ };
-    const videos = [ /* same as opaque */ ];
-
-    const feedContainer = document.getElementById('feed');
-
-    function generateFeedPartial(startIndex=0, count=10) {
-      let currentIndex = startIndex;
-      for (let i=0; i<count; i++) {
-        const videoData = videos[currentIndex];
-
-        const card = document.createElement('div');
-        card.className = 'video-card';
-
-        const videoEl = document.createElement('video');
-        videoEl.src = videoData.src;
-        videoEl.className = 'video';
-        videoEl.muted = true;
-        videoEl.loop = true;
-        videoEl.autoplay = true;
-        card.appendChild(videoEl);
-
-        const titleEl = document.createElement('div');
-        titleEl.className = 'video-title';
-        titleEl.innerText = i === 0 ? 'this video' : 'previous video';
-        card.appendChild(titleEl);
-
-        feedContainer.appendChild(card);
-
-        // Partial algorithm: pick randomly from high + moderate
-        const category = videoData.category;
-        const options = [...recommendationMap[category].high, ...recommendationMap[category].moderate];
-        const nextCategory = options[Math.floor(Math.random() * options.length)];
-        const nextIndex = videos.findIndex(v => v.category === nextCategory);
-        currentIndex = nextIndex !== -1 ? nextIndex : Math.floor(Math.random() * videos.length);
-      }
-    }
-
-    generateFeedPartial();
-
-    // Autoplay/pause
-    const videoCards = document.querySelectorAll('.video-card');
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        const video = entry.target.querySelector('video');
-        if (entry.isIntersecting) video.play();
-        else video.pause();
-      });
-    }, { threshold: 0.75 });
-
-    videoCards.forEach(card => observer.observe(card));
+    generateFeed("partial"); // Partial algorithm
   </script>
 </body>
 </html>
