--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Full Feed</title>
-  <link rel="stylesheet" href="../css/tiktok.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Full Feed</title>
+<link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
   <div id="feed"></div>
-  <script src="js/tiktokFull.js"></script>
+  <script src="../js/tiktokFull.js"></script>
 </body>
 </html>
