--- a/tiktok/partial.html
+++ b/tiktok/partial.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Partial Feed</title>
-<link rel="stylesheet" href="../css/tiktok.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Partial Transparency</title>
+  <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
-  <div id="feed"></div>
+  <div class="app-container">
+    <div id="feedContainer" class="feed"></div>
+  </div>
+
   <script src="../js/tiktokPartial.js"></script>
 </body>
 </html>
