--- a/tiktok/full.html
+++ b/tiktok/full.html
@@ -7,6 +7,29 @@
   <link rel="stylesheet" href="../css/tiktok.css">
 </head>
 <body>
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-app.js";
+  import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/10.6.1/firebase-database.js";
+
+  // Replace with your Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyDY9k4h5_6WoeN5RD6Gxgy2ZZUwBo5VZxc",
+    authDomain: "ap-research-engagement-data.firebaseapp.com",
+    databaseURL: "https://ap-research-engagement-data-default-rtdb.firebaseio.com",
+    projectId: "ap-research-engagement-data",
+    storageBucket: "ap-research-engagement-data.firebasestorage.app",
+    messagingSenderId: "380485529410",
+    appId: "1:380485529410:web:5969cf7acb9038c07722db"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const database = getDatabase(app);
+
+  // Make it accessible to your other scripts
+  window.database = database;
+</script>
+
   <div class="app-container">
     <div id="feedContainer" class="feed"></div>
   </div>
